--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,10 @@
             <artifactId>flyway-mysql</artifactId>
             <version>10.13.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
 
 
     </dependencies>
