--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,11 @@ spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-flyway.user=databaseUser
-flyway.password=databasePassword
-flyway.schemas=app-db
-flyway.url=jdbc:h2:mem:DATABASE
-flyway.locations=filesystem:db/migration
+#flyway.user=databaseUser
+#flyway.password=databasePassword
+#flyway.schemas=app-db
+#flyway.url=jdbc:h2:mem:DATABASE
+#flyway.locations=filesystem:db/migration
 logging.level.org.springframework.web = TRACE
 spring.jpa.show-sql=true
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000  
